<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dl_gradient"
    tools:context=".MyGroupActivity" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/noJoinedGroupTV"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:gravity="center"
            android:fontFamily="@font/printable4u_regular"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            android:text="คุณยังไม่ได้เข้าร่วมกลุ่ม  สร้างกลุ่มของคุณได้เลย!"
            android:lines="1"
            android:ellipsize="end"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/m_recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent" />

        <Space
            android:id="@+id/space4"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            app:layout_constraintTop_toBottomOf="@+id/m_recyclerView" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/createGroupBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:paddingHorizontal="40dp"
        android:background="@drawable/create_group_btn"
        android:text="@string/create_group"
        android:textColor="@color/colorPrimaryDark"
        android:fontFamily="@font/printable4u_regular"
        android:textSize="@dimen/button_font"
        app:layout_constraintBottom_toTopOf="@+id/body_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/body_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/menu_bar"
        android:paddingHorizontal="@dimen/menu_padding_horizontal"
        android:paddingTop="@dimen/menu_padding_top"
        android:paddingBottom="@dimen/menu_padding_bottom"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/h_home_menu_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/h_mygroup_menu_layout"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/h_homeImg"
                    android:layout_width="@dimen/menu_icon_width"
                    android:layout_height="@dimen/menu_icon_height"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/home" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/home"
                    android:fontFamily="@font/printable4u_regular"
                    android:textSize="@dimen/menu_font"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimary" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/h_mygroup_menu_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/h_notification_menu_layout"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/h_home_menu_layout"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/h_mygroupImg"
                    android:layout_width="@dimen/menu_icon_width"
                    android:layout_height="@dimen/menu_icon_height"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/mygroup_d" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/mygroup"
                    android:fontFamily="@font/printable4u_bold"
                    android:textSize="@dimen/menu_font"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimaryDark"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/h_notification_menu_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/h_user_menu_layout"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/h_mygroup_menu_layout"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/h_notiImg"
                    android:layout_width="@dimen/menu_icon_width"
                    android:layout_height="@dimen/menu_icon_height"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/notification" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/notification"
                    android:fontFamily="@font/printable4u_regular"
                    android:textSize="@dimen/menu_font"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimary"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/h_user_menu_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/h_notification_menu_layout"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/h_userImg"
                    android:layout_width="@dimen/menu_icon_width"
                    android:layout_height="@dimen/menu_icon_height"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/user" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/user"
                    android:fontFamily="@font/printable4u_regular"
                    android:textSize="@dimen/menu_font"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimary"/>
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
