<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/lr_gradient"
    tools:context=".MyGroupActivity" >

    <LinearLayout
        android:id="@+id/action_bar__layout"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="5dp"
        android:background="@color/colorLightGrey">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textColor="@color/colorPrimaryDark"
            android:fontFamily="@font/printable4u_bold"
            android:textAlignment="center"
            android:textSize="@dimen/action_bar_font"
            android:text="@string/user" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/action_bar__layout">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/userCardviewLatout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/action_bar__layout">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:layout_margin="20dp"
                android:background="@color/colorWhite"
                app:cardCornerRadius="30dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/logo_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginVertical="@dimen/regis_margin_vertical"
                    android:fontFamily="@font/printable4u_bold"
                    android:text="Stakers"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimary"
                    android:textSize="50dp" />

                <TextView
                    android:id="@+id/email_user_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="320dp"
                    android:fontFamily="@font/printable4u_bold"
                    android:text="Email"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimary"
                    android:textSize="30dp" />

                <com.mikhaellopez.circularimageview.CircularImageView
                    android:id="@+id/user_img"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="80dp"
                    android:layout_marginVertical="@dimen/regis_margin_vertical"
                    android:adjustViewBounds="true"
                    android:background="@drawable/regis_user"
                    android:scaleType="centerCrop"
                    app:civ_border_color="@color/colorYellow"
                    app:civ_border_width="5dp" />




            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/dataUser_Btn"
                android:layout_width="@dimen/regis_button_width"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_gravity="center"
                android:background="@drawable/white_border_btn"
                android:fontFamily="@font/printable4u_bold"
                android:text="ดูข้อมูล"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/login_text_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView"/>

            <TextView
                android:id="@+id/logout_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:layout_gravity="center"
                android:fontFamily="@font/printable4u_bold"
                android:text="ออกจากระบบ"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/login_text_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dataUser_Btn" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="100dp"
                app:layout_constraintTop_toBottomOf="@+id/logout_tv" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/body_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/menu_bar"
        android:paddingHorizontal="@dimen/menu_padding_horizontal"
        android:paddingTop="@dimen/menu_padding_top"
        android:paddingBottom="@dimen/menu_padding_bottom"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/h_home_menu_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/h_mygroup_menu_layout"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/h_homeImg"
                    android:layout_width="@dimen/menu_icon_width"
                    android:layout_height="@dimen/menu_icon_height"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/home" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/home"
                    android:fontFamily="@font/printable4u_regular"
                    android:textSize="@dimen/menu_font"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimary" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/h_mygroup_menu_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/h_notification_menu_layout"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/h_home_menu_layout"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/h_mygroupImg"
                    android:layout_width="@dimen/menu_icon_width"
                    android:layout_height="@dimen/menu_icon_height"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/mygroup" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/mygroup"
                    android:fontFamily="@font/printable4u_regular"
                    android:textSize="@dimen/menu_font"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimary"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/h_notification_menu_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/h_user_menu_layout"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/h_mygroup_menu_layout"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/h_notiImg"
                    android:layout_width="@dimen/menu_icon_width"
                    android:layout_height="@dimen/menu_icon_height"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/notification" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/notification"
                    android:fontFamily="@font/printable4u_regular"
                    android:textSize="@dimen/menu_font"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimary"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/h_user_menu_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/h_notification_menu_layout"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/h_userImg"
                    android:layout_width="@dimen/menu_icon_width"
                    android:layout_height="@dimen/menu_icon_height"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/user_d" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/user"
                    android:fontFamily="@font/printable4u_bold"
                    android:textSize="@dimen/menu_font"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimaryDark"/>
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
